# STM32_WS2812B

./: CMakeLists.txt  README.md
CubeMX_files/: .mxproject  Makefile  STM32_NEC.ioc  STM32_WS2812B.ioc
CubeMX_files/Inc/: NEC_IR.h  WS2812B.h  main.h  rgb_hsl_hsv.h  rgb_hsv.h  seg_7_display.h  stm32f4xx_it.h
CubeMX_files/Src/: NEC_IR.c  WS2812B.c  dma.c  gpio.c  main.c  rgb_hsl_hsv.c  rgb_hsv.c  seg_7_display.c  stm32f4xx_it.c  tim.c  usart.c
tests/: CMakeLists.txt  test.cpp
